--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,12 @@
+@import "css/header.css";
+@import "css/search.css";
+@import "css/main.css";
+@import "css/cart.css";
+@import "css/footer.css";
+@import "css/preview.css";
+@import "css/sidebar.css";
+@import "css/restaurant-content.css";
+
 * {
   box-sizing: border-box;
 }
@@ -15,22 +24,16 @@ body {
   --background-4: #3b3b3b;
   --background-5: #000;
   --background-6: #59bd5a;
+  --background-7: #757575;
   --border-1: #e0e0e0;
   --border-2: rgba(38, 38, 38, 0.16);
   --border-3: rgba(117, 117, 117, 0.3);
+  --border-4: rgba(117, 117, 117, 0.2);
   --font_roboto: roboto;
   --color-1: #626262;
   --color-2: #1d1d1d;
   --color-3: #49a144;
-}
-
-.header {
-  background-color: var(--background-1);
-  box-shadow: 0 0 16px var(--border-2);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1;
+  --color-4: #327430;
 }
 
 .wrapper {
@@ -42,395 +45,6 @@ body {
   align-items: center;
 }
 
-.header__logo {
-  width: 121px;
-}
-
-.delivery {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.delivery-p {
-  font-family: var(--font_roboto);
-  font-size: 16px;
-  line-height: 19px;
-  color: var(--color-1);
-  padding: 0 9px;
-}
-
-.delivery__time {
-  padding: 8px 12px;
-  border: 1px solid var(--border-1);
-  border-radius: 2px;
-  font-family: var(--font_roboto);
-  font-size: 16px;
-  line-height: 24px;
-  color: var(--color-2);
-  text-decoration: none;
-}
-
-.time-p {
-  margin: 0;
-}
-
-.delivery__address-input {
-  padding: 8px 12px;
-  border: 1px solid var(--border-1);
-  border-radius: 2px;
-  font-family: var(--font_roboto);
-  font-size: 16px;
-  line-height: 24px;
-  color: var(--color-2);
-}
-
-.button_container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.sing-in {
-  width: auto;
-  margin: 0 8px;
-  padding: 8px 12px;
-  border: 1px solid var(--border-1);
-  border-radius: 2px;
-  text-decoration: none;
-  font-family: var(--font_roboto);
-  font-size: 16px;
-  line-height: 24px;
-  color: var(--color-2);
-  background-color: var(--background-1);
-}
-
-.register {
-  width: auto;
-  margin: 0 8px;
-  padding: 8px 12px;
-  border: 1px solid var(--background-3);
-  border-radius: 2px;
-  text-decoration: none;
-  font-family: var(--font_roboto);
-  font-size: 16px;
-  line-height: 24px;
-  background-color: var(--background-3);
-  color: var(--background-1);
-}
-
-.basket {
-  padding: 8px 12px;
-  text-decoration: none;
-}
-
-.search {
-  margin-top: 30px;
-  width: 100%;
-}
-
-.search__form {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  padding-bottom: 15px;
-  border-bottom: 1px solid var(--border-3);
-}
-
-.search__form-input {
-  border: none;
-  width: 100%;
-}
-
-.search__label {
-  width: 100%;
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  padding-top: 74px;
-}
-
-.main-h1 {
-  margin-right: auto;
-  font-family: var(--font_roboto);
-  font-size: 22px;
-  line-height: 34px;
-  color: var(--color-2);
-  padding-top: 40px;
-}
-
-.main__container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
 .wrap {
   width: 32.5%;
-}
-
-.cart-a {
-  text-decoration: none;
-}
-
-.cart__img {
-  width: 100%;
-}
-
-.cart__text {
-  max-width: 100%;
-}
-
-.text-h2 {
-  font-family: var(--font_roboto);
-  font-size: 16px;
-  line-height: 24px;
-  color: var(--color-2);
-}
-
-.text-span {
-  display: block;
-  font-family: var(--font_roboto);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 14px;
-  line-height: 21px;
-  color: var(--color-1);
-}
-
-.text-span:before {
-  content: "₴₴ •";
-}
-
-.text-p {
-  font-family: var(--font_roboto);
-  font-size: 13px;
-  line-height: 21px;
-  color: var(--color-2);
-}
-
-.footer {
-  background-color: var(--background-3);
-  position: relative;
-  z-index: 0;
-  padding-top: 56px;
-  padding-bottom: 40px;
-}
-
-.footer__container {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__logo {
-  width: 192px;
-  padding-bottom: 40px;
-}
-
-.line {
-  width: 100%;
-  height: 1px;
-  background-color: var(--background-1);
-  opacity: 0.4;
-}
-
-.column-container {
-  width: 100%;
-  display: flex;
-  padding-top: 32px;
-  padding-bottom: 26px;
-}
-
-.column {
-  width: 33%;
-}
-
-.logo-footer {
-  margin-right: auto;
-}
-
-.column-select {
-  height: 40px;
-  width: 195px;
-  font-family: var(--ropboto);
-  font-size: 13px;
-  line-height: 15px;
-  background-color: var(--background-4);
-  border: var(--background-4);
-  border-radius: 0 2px 2px 0;
-  color: var(--background-1);
-}
-
-.wrap-select {
-  display: flex;
-  align-items: center;
-}
-
-.img-select {
-  height: 40px;
-  background-color: var(--background-4);
-  border: var(--background-4);
-  border-radius: 2px 0 0 2px;
-  display: flex;
-  justify-content: center;
-}
-
-.footer-span {
-  font-family: var(--ropboto);
-  font-size: 16px;
-  line-height: 19px;
-  color: var(--background-1);
-  padding-top: 14px;
-  padding-bottom: 12px;
-  display: block;
-}
-
-.footer-span:before {
-  content: "#";
-  color: var(--color-3);
-}
-
-.networks-a {
-  text-decoration: none;
-}
-
-.networks-img {
-  width: 24px;
-  margin: 2px;
-}
-
-.footer__ul-li {
-  list-style-type: none;
-  padding-bottom: 22px;
-}
-
-.footer__ul-a {
-  text-decoration: none;
-  font-family: var(--ropboto);
-  font-size: 13px;
-  line-height: 15px;
-  color: var(--background-1);
-  padding: 14px 0;
-}
-
-.button {
-  margin: 0 auto;
-  display: flex;
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.a-button-text {
-  text-decoration: none;
-  margin: 0 40px;
-}
-
-.a-button {
-  background-color: var(--background-5);
-  width: 156px;
-  height: 47px;
-  border-radius: 7px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.button-text {
-  display: flex;
-  flex-direction: column;
-  margin-right: auto;
-}
-
-.p-button {
-  color: var(--background-1);
-  font-family: var(--ropboto);
-  font-size: 10px;
-  margin: 0;
-}
-
-.h5-app {
-  color: var(--background-1);
-  font-family: var(--ropboto);
-  font-size: 21px;
-  margin: 0;
-  font-weight: normal;
-}
-
-.h5-google {
-  color: var(--background-1);
-  font-family: var(--ropboto);
-  font-size: 17px;
-  margin: 0;
-  font-weight: normal;
-}
-
-.span-google {
-  font-family: var(--ropboto);
-  font-weight: lighter;
-}
-
-.img-apple {
-  width: 30px;
-  height: 25px;
-  background: url("img/icon-apple.svg") no-repeat;
-  background-size: contain;
-  background-position: center;
-  margin: 0 auto;
-}
-
-.img-google {
-  width: 30px;
-  height: 25px;
-  align-items: center;
-  background: url("img/icon-google.svg") no-repeat;
-  background-size: contain;
-  background-position: center;
-  margin: 0 auto;
-}
-
-.column-p {
-  font-family: var(--ropboto);
-  font-size: 11px;
-  line-height: 13px;
-  color: var(--background-1);
-}
-
-.column-p:before {
-  content: "© ";
-}
-
-.column-a {
-  text-decoration: none;
-  font-family: var(--ropboto);
-  font-size: 11px;
-  line-height: 13px;
-  color: var(--background-1);
-}
-
-.row-column {
-  padding-left: 40px;
-}
-
-.footer__up {
-  position: absolute;
-  right: 16px;
-  bottom: 24px;
-  width: 80px;
-  height: 80px;
-  background-color: var(--background-6);
-  z-index: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.img-up {
-  width: 15px;
-  height: 25px;
-  margin: auto;
 }
